fixed overflow error for the reviews.css

--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -243,6 +243,7 @@
   }
 
   .reviews__btn {
+    align-self: flex-start;
     order: 1;
     width: 175px;
     margin-top: 10px;
